# django_clean

./: README.md  pyproject.toml  pytest.ini  requirements.txt
infrastructure/: config.py
infrastructure/containers/: dependencies.py
infrastructure/external_services/: prospect_http_client.py
infrastructure/framework/lss/: db.sqlite3
infrastructure/framework/lss/apps/hiring/: apps.py
infrastructure/framework/lss/apps/recruitment/: admin.py  choices.py  models.py  urls.py
infrastructure/framework/lss/apps/recruitment/api/serializers/: application.py  prospect.py
infrastructure/framework/lss/apps/recruitment/migrations/: 0001_initial.py  0002_alter_prospect_current_application.py  0003_rename_profile_application_position.py  0004_alter_application_position_and_more.py
infrastructure/framework/lss/apps/recruitment/repositories/: application.py  prospect.py
infrastructure/framework/lss/lss/: asgi.py  settings.py  urls.py  wsgi.py
lss_clean/contexts/recruitment/application/dtos/: profiling_command.py  prospect_command.py  reject_application_command.py
lss_clean/contexts/recruitment/application/repositories/: application.py  prospect.py
lss_clean/contexts/recruitment/application/services/: prospect.py
lss_clean/contexts/recruitment/application/use_cases/: create_prospect.py  profiling_prospect.py  reject_application.py
lss_clean/contexts/recruitment/domain/: enums.py  events.py  exceptions.py
lss_clean/contexts/recruitment/domain/entities/: __init__.py  entities.py  entity.py
lss_clean/tests/unit_tests/: test_recruitment_entities.py
(+2 files in other folders)
